retirando códigos e arquivos desnecessários

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<section class="content">
 		<section class="fixed">
-			<div class="container"> <!-- o container é para alinhar os elementos do menu no centro da página independente do tamanho dela -->
+			<div class="container">
 				<nav class="menu">
 					<picture>
 						<a href="index.html">
@@ -32,7 +32,7 @@
 									<li>
 										<a href="qualidade.html">Qualidade</a>
 									</li>
-								</ul> <!-- este ul dentro do li é onde fazemos o dropdown do menu, para criar isso fiz uma lista dentro do li cursos que é onde tem o dropdown que chama a págida de cada curso do campos -->
+								</ul>
 							</li>
 							<li>
 								<a href="contato.html">Contato</a>
@@ -49,8 +49,8 @@
 			</div>
 		</section>
 
-			<section class="banner movit"> <!-- a tag section serve para dividir o código em seções, no nesse caso, essa é a seção do banner. -->
-				<span class="pagina"></span> <!-- neste span é onde iremos adicionar o indice (bolinhas) do banner que chamamos as imagens e apontam qual é a imagem atual -->
+			<section class="banner movit">
+				<span class="pagina"></span>
 				<div class="slider">
 					<div class="slider-item">
 						<img src="img/banner1.jpg" alt=""/>
@@ -64,8 +64,7 @@
 					<div class="slider-item">
 						<img src="img/banner4.jpg" alt=""/>
 					</div>
-					<!-- as imagens ainda serão editadas e talvez possamos colocar outras melhores -->
-				</div> <!-- div do slide e as imagens que iram ser aplicadas ao banner -->
+				</div>
 			</section>
 
 			<section class="noticias movit">
@@ -133,9 +132,8 @@
 
 	</section>	
 		<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-		<script type="text/javascript" src="js/jquery.cycle.all.js"></script><!-- No banner usamos o plugin Cycle que é bem simples e prático. Pra utilizar ele precisamos linkar o arquivo no código, precisamente dessa forma, colocando o arquivo jquery primeiro, depois o arquivo cycle, seguido do arquivo ou código onde chamamos a função e determinamos o que queremos para nosso banner. -->
-		<script type="text/javascript" src="js/main.js"></script> <!-- arquivo onde vamos colocar TODOS os códigos js que seram usados no nosso site -->
-		<!--<script type="text/javascript" src="js/jquery.min.js"></script>-->
+		<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/modernizr.custom.min.js"></script>	
 		<script type="text/javascript" src="js/ScrollMagic.js"></script>
 	</body>
