--- a/informatica-para-internet.html
+++ b/informatica-para-internet.html
@@ -11,7 +11,7 @@
 <body>
 	<section class="content">
 		<section class="fixed movit">
-			<div class="container"> <!-- o container é para alinhar os elementos do menu no centro da página independente do tamanho dela -->
+			<div class="container">
 				<nav class="menu">
 					<picture>
 						<a href="index.html">
@@ -32,7 +32,7 @@
 									<li>
 										<a href="qualidade.html">Qualidade</a>
 									</li>
-								</ul> <!-- este ul dentro do li é onde fazemos o dropdown do menu, para criar isso fiz uma lista dentro do li cursos que é onde tem o dropdown que chama a págida de cada curso do campos -->
+								</ul>
 							</li>
 							<li>
 								<a href="contato.html">Contato</a>
@@ -87,9 +87,7 @@
 					<hr>
 				</div>
 			</section>
-
 		</section>
-
 		<script src="js/main.js"></script>
 	</body>
-	</html>
+</html>
