--- a/sistema/index.html
+++ b/sistema/index.html
@@ -13,7 +13,7 @@
             <section class="topofix">
                 <div class="container">
                     <img src="../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
-                    <a href="../index.html" class="btn sair">Sair</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                    <a href="../index.html" class="btn sair">Sair</a>
                 </div>
             </section>
             
