--- a/sistema/secretaria/cadastrar_professor.html
+++ b/sistema/secretaria/cadastrar_professor.html
@@ -13,7 +13,7 @@
         <section class="topofix">
             <div class="container">
                 <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
-                <a href="menu_secretaria.html" class="btn">Voltar</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                <a href="menu_secretaria.html" class="btn">Voltar</a>
             </div>
         </section>
         <div class="container">
