--- a/sistema/aluno/menu_aluno.html
+++ b/sistema/aluno/menu_aluno.html
@@ -13,7 +13,7 @@
             <section class="topofix">
                 <div class="container">
                     <img src="../../img/logo-sistema.jpg" alt="logo do Sistema IFJG">
-                    <a href="../index.html" class="btn">Voltar ao menu</a> <!-- Esta tag será o botão para voltar a página do site, caso queira. -->
+                    <a href="../index.html" class="btn">Voltar ao menu</a>
                 </div>
             </section>
 
@@ -32,6 +32,5 @@
                 </ul>
             </section>
         </div>
-        
     </body>
 </html>
