Indentação de textos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Site inicial do Sistema escolar IFPE-JG, criado pelos alunos: Barbaha Maria, Thayane Lopes, Rennan Maxi e Vicente Vinicius sob instrução do professor Francisco Junior para a disciplina de Projeto e Prática.">
+	<meta name="description" content="Site inicial do Sistema escolar IFPE-JG, criado pelos alunos: Barbaha Maria, 
+					  Thayane Lopes, Rennan Maxi e Vicente Vinicius sob instrução do professor Francisco Junior 
+					  para a disciplina de Projeto e Prática.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>IFPE-JG</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
@@ -72,11 +74,19 @@
 					<h1>Noticias do Campus</h1>
 					<div class="publicacao right">
 						<h1>A comida da cantina tá muito cara</h1>
-						<p>Por motivos da crise financeira, alunos do IFJG preferem o "Tio lá da frente" ao invés do "Tio da cantina" por motivos de preço baixo e qualidade do produto! <br>Alunos vem reclamando da quantidade de vezes que compraram coxinha no Tio da cantina e receberam um produto velho, do dia anterior, mesmo pagando um valor consideravelmente caro. Por volta de um mês, apareceu uma novidade: Um novo vendedor de lanches na frente do campus, conhecido também como "Tio lá da frente" que vende vários tipos de salgados, grandes e deliciosos por apenas três reais e por mais dois reais pode adquirir um suco da fruta (acredite, da fruta)! <br>Com essa consideravel diferença, os alunos preferem ir no Tio lá da frente e o Tio da cantina começou a perder a clientela gradualmente. É nisso que dá vender comida cara.</p>
+						<p>Por motivos da crise financeira, alunos do IFJG preferem o "Tio lá da frente" ao invés do "Tio da cantina" 
+							por motivos de preço baixo e qualidade do produto! <br>Alunos vem reclamando da quantidade de vezes que 
+							compraram coxinha no Tio da cantina e receberam um produto velho, do dia anterior, mesmo pagando um valor 
+							consideravelmente caro. Por volta de um mês, apareceu uma novidade: Um novo vendedor de lanches na frente 
+							do campus, conhecido também como "Tio lá da frente" que vende vários tipos de salgados, grandes e deliciosos 
+							por apenas três reais e por mais dois reais pode adquirir um suco da fruta (acredite, da fruta)! <br>
+							Com essa consideravel diferença, os alunos preferem ir no Tio lá da frente e o Tio da cantina começou a 
+							perder a clientela gradualmente. É nisso que dá vender comida cara.</p>
 					</div>
 					<div class="publicacao">
 						<h1>Saiu a lista de alunos para o bolsa permanencia</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo rerum facilis deserunt maxime perspiciatis suscipit numquam ipsam, quisquam nesciunt, expedita voluptas et placeat odio nisi dolorum. Ab, minus nam tenetur.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo rerum facilis deserunt maxime perspiciatis suscipit 
+							numquam ipsam, quisquam nesciunt, expedita voluptas et placeat odio nisi dolorum. Ab, minus nam tenetur.</p>
 					</div>
 				</div>
 			</section>    		
